fix learn more spacing

--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@
     font-weight: 500;
     font-size: 16px;
     margin-top: 0;
-    margin-bottom: 4px;
+    margin-bottom: 16px;
 }
 .learn,
 a {
